# bundles_cicd_blueprint

.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
my_project/: .gitignore  databricks.yml  pyproject.toml  requirements-dev.txt  setup.py
my_project/resources/: my_project.job.yml  my_project.pipeline.yml
my_project/src/: dlt_pipeline.ipynb  notebook.ipynb
my_project/src/my_project/: main.py
my_project/tests/: main_test.py
